argocd/media/server/droppedneedle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: droppedneedle
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droppedneedle
  template:
    metadata:
      labels:
        app: droppedneedle
    spec:
      containers:
      - name: droppedneedle
        image: ghcr.io/habirabbu/droppedneedle
        volumeMounts:
        - name: data
          mountPath: /app/config
          subPath: data
        - name: data
          mountPath: /app/cache
          subPath: cache
        - name: downloads
          mountPath: /downloads
        - name: media
          mountPath: /music
          subPath: Music
        ports:
        - containerPort: 8688
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: droppedneedle-data
      - name: downloads
        persistentVolumeClaim:
          claimName: nfs-downloads
      - name: media
        persistentVolumeClaim:
          claimName: nfs-media
