argocd/media/server/droppedneedle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: droppedneedle
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8688
  selector:
    app: droppedneedle
