argocd/media/server/droppedneedle/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: droppedneedle-internal-route
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["droppedneedle.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: droppedneedle
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: droppedneedle-route
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-default
    namespace: default
  hostnames: ["droppedneedle.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: droppedneedle
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
